# POLARIS

./: .gitignore  .gitlab-ci.yml  AUTHORS  AUTHORS.md  CMakeLists.txt  COPYING  COPYING.md  FindCCFITS.cmake  FindCFITSIO.cmake  INSTALL  LICENSE.md  NEWS  QUICKSTART.md  README  README.md  compile.sh  configure.ac  create_polaris_installer.sh  examples.tar.xz  foo.trace  install_polaris.sh  quickstart.md
.github/workflows/: ci.yml
ci/: test.sh
codes/: plot_polaris_map.py
input/: .gitignore
input/dust/: .gitignore  1p8_0p05_660.nk  1p8_0p05_662p6e-9.nk  2_0p02_660.nk  graphite_parallel.nk  graphite_parallel_d03.nk  graphite_parallel_ld93.nk  graphite_perpend.nk  graphite_perpend_d03.nk  graphite_perpend_ld93.nk  organics.nk  silicate.nk  silicate_d03.nk  silicate_ld93.nk  silicate_wd01.nk  water_ice.nk
input/dust/graphite_parallel/: scat.inf  wID001.sca  wID002.sca  wID003.sca  wID004.sca  wID005.sca  wID006.sca  wID007.sca  wID008.sca  wID009.sca  wID010.sca  wID011.sca  wID012.sca  wID013.sca  wID014.sca  wID015.sca  wID016.sca  wID017.sca  wID018.sca  wID019.sca  wID020.sca  wID021.sca  wID022.sca  wID023.sca  wID024.sca  wID025.sca  wID026.sca  wID027.sca  wID028.sca  wID029.sca  wID030.sca  wID031.sca  wID032.sca  wID033.sca  wID034.sca  wID035.sca  wID036.sca  wID037.sca  wID038.sca  wID039.sca  (+61 more)
input/dust/graphite_perpend/: wID001.sca  wID002.sca  wID003.sca  wID004.sca  wID005.sca  wID006.sca  wID007.sca  wID008.sca  wID009.sca  wID010.sca  wID011.sca  wID012.sca  wID013.sca  wID014.sca  wID015.sca  wID016.sca  wID017.sca  wID018.sca  wID019.sca  wID020.sca  wID021.sca  wID022.sca  wID023.sca  wID024.sca  wID025.sca  wID026.sca  wID027.sca  wID028.sca  wID029.sca  wID030.sca  wID031.sca  wID032.sca  wID033.sca  wID034.sca  wID035.sca  wID036.sca  wID037.sca  wID038.sca  wID039.sca  wID040.sca  (+60 more)
input/dust/pah_neutral/: scat.inf
input/dust/silicate/: wID001.sca  wID002.sca  wID003.sca  wID004.sca  wID005.sca  wID006.sca  wID007.sca  wID008.sca  wID009.sca  wID010.sca  wID011.sca  wID012.sca  wID013.sca  wID014.sca  wID015.sca  wID016.sca  wID017.sca  wID018.sca  wID019.sca  wID020.sca  wID021.sca  wID022.sca  wID023.sca  wID024.sca  wID025.sca  wID026.sca  wID027.sca  wID028.sca  wID029.sca  wID030.sca  wID031.sca  wID032.sca  wID033.sca  wID034.sca  wID035.sca  wID036.sca  wID037.sca  wID038.sca  wID039.sca  wID040.sca  (+60 more)
input/dust_nk/: olivine.nk  ssil3-v6.nk
input/gas/: .gitignore
input/refractive_indices/: ammonia_m84.nk  methane_ice_mo94.nk  methane_mo94.nk  silicate_d03.nk  silicate_wd01.nk  sulfuric_acid_pw75.nk  titan_tholins_k84.nk  venus_clouds_hh74.nk  water_hq73.nk  water_ice_p94.nk  water_ice_wb08.nk  water_s81.nk
lib/: .gitignore
projects/: CommandList.cmd  MODELS.md  example1.cmd  example2.cmd  plot.py  plot_examples.py
projects/cloudy/: POLARIS.cmd
projects/constantCylinder/: example1.grid
projects/constantCylinder/example1/data/: time.txt
projects/constantCylinder/example1/plots/: dust_mixture_001_cross.plt  dust_mixture_001_diff.plt  dust_mixture_001_eff.plt  dust_mixture_001_g.plt  dust_mixture_001_kappa.plt  dust_mixture_001_scat.plt  dust_mixture_001_size_dist.plt
projects/constantCylinder/example2/data/: time.txt
projects/constantCylinder/example2/plots/: dust_mixture_001_cross.plt  dust_mixture_001_eff.plt  dust_mixture_001_g.plt  (+3 more)
projects/methane/: POLARIS.cmd
projects/ocean/: POLARIS.cmd
projects/rayleigh/: POLARIS.cmd
projects/ringed/: POLARIS.cmd
projects/test/planet/: POLARIS_EXTEN.cmd  POLARIS_PLANE.cmd  compare.py
projects/test/reemission_sphere/: POLARIS.cmd  compare.py
projects/test/stellar_scattering_sphere/: POLARIS.cmd  compare.py
projects/test/stellar_sed/: POLARIS.cmd  compare.py
projects/venus/: POLARIS.cmd  coffeen_gehrels_1969.txt
src/: .clang-format  .directory  .gitignore  CMakeLists.txt  Cell.h  CommandParser.cpp  CommandParser.h  Cylindrical.cpp  Cylindrical.h  Detector.h  Dust.cpp  Dust.h  Dust_t.cpp  Faddeeva.cc  FindCCFITS.cmake  FindCFITSIO.cmake  GasSpecies.cpp  GasSpecies.h  GasSpecies_broken.h  Grid.cpp  Grid.h  Makefile.am  MathFunctions.cpp  MathFunctions.h  MathFunctions_t.cpp  Matrix2D.h  OPIATE.cpp  OPIATE.h  OcTree.cpp  OcTree.h  Parameters.h  Photon.h  Pipeline.cpp  Pipeline.h  RadiativeTransfer.cpp  RadiativeTransfer.h  Raytracing.h  Source.cpp  Source.h  Spherical.cpp  (+13 more)
tools/: .gitignore  AUTHORS  COPYING  Makefile  configure.ac  polaris-gen.in  polaris-plot.in  polaris-remote.in  polaris-run.in  polaris-test.in  quickstart.md  setup.py
tools/polaris_tools_custom/: .gitignore  bg_source.py  detector.py  dust.py  ext_input.py  model.py  plots.py  server.py  server.py.empty  source.py
tools/polaris_tools_modules/: atmosphere.py  base.py  bg_source.py  command.py  create_gas.py  detector.py  dust.py  ext_input.py  file.py  gas.py  grid.py  math.py  model.py  server.py  source.py  visual.py
tools/src/: .gitignore  Makefile.am  __init__.py  polaris-extra.in  polaris-gen.in  polaris-plot.in  polaris-remote.in  polaris-run.in  polaris-test.in
tools/src/custom/: Makefile.am  bg_source.py  bg_source.py.empty  detector.py  detector.py.empty  dust.py  dust.py.empty  ext_input.py  ext_input.py.empty  gas.py  model.py  model.py.empty  plots.py  plots.py.empty  server.py  server.py.empty  source.py  source.py.empty
tools/src/modules/: Makefile.am  base.py  bg_source.py  command.py  create_dust.py  create_gas.py  detector.py  dust.py  dust_source.py  ext_input.py  file.py  gas.py  grid.py  math.py  model.py  server.py  source.py  visual.py
tools_basic/: .gitignore  polaris-gen.in  polaris-run.in  quickstart.html  quickstart.md  setup.py
tools_basic/polaris_tools_custom/: model.py
tools_basic/polaris_tools_modules/: base.py  file.py  grid.py  math.py  model.py
tools_basic/polars_tools_modules/: base.py  command.py  detector.py  file.py  grid.py  math.py  model.py
tools_old/: .gitignore  README  polaris-extra.in  polaris-test.in
tools_old/polaris_tools_custom/: dust.py  ext_input.py  gas.py
tools_old/polaris_tools_modules/: create_dust.py  model.py
(+9 files in other folders)
