cmake_minimum_required (VERSION 2.8.11)
project (POLARIS)

SET(${PROJECT_NAME}_MAJOR_VERSION 5)
SET(${PROJECT_NAME}_MINOR_VERSION 05)
SET(${PROJECT_NAME}_VERSION ${${PROJECT_NAME}_MAJOR_VERSION}.${${PROJECT_NAME}_MINOR_VERSION})

option(BUILD_STATIC_LIBS "Build Static Libraries" OFF)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR})
set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${CMAKE_CURRENT_LIST_DIR}/cfitsio)
set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${CMAKE_CURRENT_LIST_DIR}/CCfits)

find_package(CCFITS REQUIRED)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})
INCLUDE_DIRECTORIES(${CFITSIO_INCLUDE_DIR})

add_subdirectory(src)
