modules_PYTHON = \
    bg_source.py \
    base.py \
    command.py \
    create_dust.py \
    create_gas.py \
    detector.py \
    dust.py \
    dust_source.py \
    ext_input.py \
    file.py \
    gas.py \
    grid.py \
    math.py \
	model.py \
	source.py \
	server.py \
	visual.py
	
modulesdir = $(pythondir)/modules
